--- a/index_dashboard.html
+++ b/index_dashboard.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/style_dashboard/style.css" />
+    <link rel="stylesheet" href="./style_dashboard/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,31 +17,31 @@
         font-family: "Quicksand";
         font-style: normal;
         font-weight: 100 900;
-        src: url("/Quicksand font 1/static/Quicksand-Medium.ttf");
+        src: url("./Quicksand font 1/static/Quicksand-Medium.ttf");
       }
       @font-face {
         font-family: "Quicksand-bold";
         font-style: normal;
         font-weight: 100 900;
-        src: url("/Quicksand font 1/static/Quicksand-Bold.ttf");
+        src: url("./Quicksand font 1/static/Quicksand-Bold.ttf");
       }
       @font-face {
         font-family: "Quicksand-semibold";
         font-style: normal;
         font-weight: 100 900;
-        src: url("/Quicksand font 1/static/Quicksand-SemiBold.ttf");
+        src: url("./Quicksand font 1/static/Quicksand-SemiBold.ttf");
       }
       @font-face {
         font-family: "Quicksand-bold";
         font-style: normal;
         font-weight: 100 900;
-        src: url("/Quicksand font 1/static/Quicksand-Bold.ttf");
+        src: url("./Quicksand font 1/static/Quicksand-Bold.ttf");
       }
     </style>
   </head>
   <body id="body">
     <nav class="navbar bg-dark" id="navbar">
-      <img src="/icons/logo used in header.svg" alt="" id="nav-bulb" />
+      <img src="./icons/logo used in header.svg" alt="" id="nav-bulb" />
       <ul id="nav-btn">
         <a href="" class="nav-each-btn" id="nav-btn1">Dashboard</a>
         <a href="" class="nav-each-btn">Contents</a>
@@ -76,18 +76,18 @@
         id="hambur"
         onclick="myFunction()"
       >
-        <img src="/icons/hamburger-menu.svg" alt=""
+        <img src="./icons/hamburger-menu.svg" alt=""
       /></a>
     </nav>
 
     <div class="summary">
       <div id="course" class="cour-class">
-        <img src="/icons/courses.svg" alt="" class="summ-img" />
+        <img src="./icons/courses.svg" alt="" class="summ-img" />
         <p class="num">4</p>
         <p class="summ-desc">Courses</p>
       </div>
       <div id="class" class="cour-class">
-        <img src="/icons/classes.svg" alt="" class="summ-img" />
+        <img src="./icons/classes.svg" alt="" class="summ-img" />
         <p class="num">4</p>
         <p class="summ-desc">Classes</p>
       </div>
@@ -100,7 +100,7 @@
           <select id="Courname" name="Courname" class="select">
             <option value="Course">Course Name</option>
           </select>
-          <img src="/icons/sort.svg" alt="" id="sort-img" />
+          <img src="./icons/sort.svg" alt="" id="sort-img" />
         </form>
       </div>
     </div>
@@ -108,13 +108,13 @@
     <div class="course-card">
       <div class="card-divs" id="div1">
         <div class="card-img">
-          <img src="/images/imageMask-1.svg" alt="" />
+          <img src="./images/imageMask-1.svg" alt="" />
         </div>
         <div class="previews">
-          <img src="/icons/preview.svg" alt="" class="pre-img" />
-          <img src="/icons/manage course.svg" alt="" class="pre-img" />
-          <img src="/icons/grade submissions.svg" alt="" class="pre-img" />
-          <img src="/icons/reports.svg" alt="" class="pre-img" />
+          <img src="./icons/preview.svg" alt="" class="pre-img" />
+          <img src="./icons/manage course.svg" alt="" class="pre-img" />
+          <img src="./icons/grade submissions.svg" alt="" class="pre-img" />
+          <img src="./icons/reports.svg" alt="" class="pre-img" />
         </div>
         <div class="line1 line"><p>Acceleration</p></div>
         <div class="line2 line">
@@ -144,18 +144,18 @@
           <p>21-Jan-2020 - 21-Aug-2020</p>
         </div>
         <div class="star">
-          <img src="/icons/favourite.svg" alt="" />
+          <img src="./icons/favourite.svg" alt="" />
         </div>
       </div>
       <div class="card-divs" id="div2">
         <div class="card-img">
-          <img src="/images/imageMask-2.svg" alt="" />
+          <img src="./images/imageMask-2.svg" alt="" />
         </div>
         <div class="previews">
-          <img src="/icons/preview.svg" alt="" class="pre-img" />
-          <img src="/icons/manage course.svg" alt="" class="pre-img" />
-          <img src="/icons/grade submissions.svg" alt="" class="pre-img" />
-          <img src="/icons/reports.svg" alt="" class="pre-img" />
+          <img src="./icons/preview.svg" alt="" class="pre-img" />
+          <img src="./icons/manage course.svg" alt="" class="pre-img" />
+          <img src="./icons/grade submissions.svg" alt="" class="pre-img" />
+          <img src="./icons/reports.svg" alt="" class="pre-img" />
         </div>
         <div class="line1 line"><p>Displacement, Velocity and Speed</p></div>
         <div class="line2 line">
@@ -181,18 +181,18 @@
         </div>
 
         <div class="star">
-          <img src="/icons/favourite.svg" alt="" />
+          <img src="./icons/favourite.svg" alt="" />
         </div>
       </div>
       <div class="card-divs" id="div3">
         <div class="card-img">
-          <img src="/images/imageMask.svg" alt="" />
+          <img src="./images/imageMask.svg" alt="" />
         </div>
         <div class="previews">
-          <img src="/icons/preview.svg" alt="" class="pre-img" />
-          <img src="/icons/manage course.svg" alt="" class="pre-img" />
-          <img src="/icons/grade submissions.svg" alt="" class="pre-img" />
-          <img src="/icons/reports.svg" alt="" class="pre-img" />
+          <img src="./icons/preview.svg" alt="" class="pre-img" />
+          <img src="./icons/manage course.svg" alt="" class="pre-img" />
+          <img src="./icons/grade submissions.svg" alt="" class="pre-img" />
+          <img src="./icons/reports.svg" alt="" class="pre-img" />
         </div>
         <div class="line1 line">
           <p>Introduction to Biology: Microorganisms and how they affect</p>
@@ -222,18 +222,18 @@
           <p>300 students</p>
         </div>
         <div class="star">
-          <img src="/icons/favourite.svg" alt="" />
+          <img src="./icons/favourite.svg" alt="" />
         </div>
       </div>
       <div class="card-divs" id="div4">
         <div class="card-img">
-          <img src="/images/imageMask-3.svg" alt="" />
+          <img src="./images/imageMask-3.svg" alt="" />
         </div>
         <div class="previews">
-          <img src="/icons/preview.svg" alt="" class="pre-img" />
-          <img src="/icons/manage course.svg" alt="" class="pre-img" />
-          <img src="/icons/grade submissions.svg" alt="" class="pre-img" />
-          <img src="/icons/reports.svg" alt="" class="pre-img" />
+          <img src="./icons/preview.svg" alt="" class="pre-img" />
+          <img src="./icons/manage course.svg" alt="" class="pre-img" />
+          <img src="./icons/grade submissions.svg" alt="" class="pre-img" />
+          <img src="./icons/reports.svg" alt="" class="pre-img" />
         </div>
         <div class="line1 line">
           <p>Introduction to hign school Mathematics</p>
@@ -265,7 +265,7 @@
           <p>14-Oct-2019 - 20-Oct-2020</p>
         </div>
         <div class="star">
-          <img src="/icons/favourite.svg" alt="" />
+          <img src="./icons/favourite.svg" alt="" />
         </div>
       </div>
     </div>
@@ -277,7 +277,7 @@
         <a href="" class="foot-button">Contant Us</a>
       </div>
       <div id="foot-div2">
-        <img src="/icons/logo used in footer.svg" alt="" />
+        <img src="./icons/logo used in footer.svg" alt="" />
         <span class="sla">|</span>
         <span class="foot-spn" id="spn1">Copyright &#169; 2020-2021</span>
         <span class="foot-spn" id="spn2"> Zeus Systems Pvt. Ltd.</span>
