dashboard render using json

--- a/index_dashboard.html
+++ b/index_dashboard.html
@@ -45,12 +45,7 @@
           </div>
         </a>
       </ul>
-      <a
-        href="javascript:void(0);"
-        class="nav-each-btn"
-        id="hambur"
-        onclick="myFunction()"
-      >
+      <a href="javascript:void(0);" class="nav-each-btn" id="hambur">
         <img src="./icons/hamburger-menu.svg" alt=""
       /></a>
     </nav>
@@ -80,170 +75,8 @@
       </div>
     </div>
 
-    <div class="course-card">
-      <div class="card-divs" id="div1">
-        <div class="card-img">
-          <img src="./images/imageMask-1.svg" alt="" />
-        </div>
-        <div class="previews">
-          <img src="./icons/preview.svg" alt="" class="pre-img" />
-          <img src="./icons/manage course.svg" alt="" class="pre-img" />
-          <img src="./icons/grade submissions.svg" alt="" class="pre-img" />
-          <img src="./icons/reports.svg" alt="" class="pre-img" />
-        </div>
-        <div class="line1 line"><p>Acceleration</p></div>
-        <div class="line2 line">
-          <p>Physics</p>
-          <p class="slash">|</p>
-          <p>Grade 7</p>
-          <p class="line2-num">+2</p>
-        </div>
-        <div class="line3 line">
-          <p class="bold">4</p>
-          <p class="line3-desc">Units</p>
-          <p class="bold">18</p>
-          <p class="line3-desc">Lessons</p>
-          <p class="bold">24</p>
-          <p class="line3-desc">Topics</p>
-        </div>
-        <div class="line4 line">
-          <form action="" class="bold">
-            <select class="teacher select">
-              <option value="Course">Mr. Frank's Class B</option>
-            </select>
-          </form>
-        </div>
-        <div class="line5 line">
-          <p>50 students</p>
-          <p class="slash">|</p>
-          <p>21-Jan-2020 - 21-Aug-2020</p>
-        </div>
-        <div class="star">
-          <img src="./icons/favourite.svg" alt="" />
-        </div>
-      </div>
-      <div class="card-divs" id="div2">
-        <div class="card-img">
-          <img src="./images/imageMask-2.svg" alt="" />
-        </div>
-        <div class="previews">
-          <img src="./icons/preview.svg" alt="" class="pre-img" />
-          <img src="./icons/manage course.svg" alt="" class="pre-img" />
-          <img src="./icons/grade submissions.svg" alt="" class="pre-img" />
-          <img src="./icons/reports.svg" alt="" class="pre-img" />
-        </div>
-        <div class="line1 line"><p>Displacement, Velocity and Speed</p></div>
-        <div class="line2 line">
-          <p>Physics 2</p>
-          <p class="slash">|</p>
-          <p>Grade 6</p>
-          <p class="line2-num">+3</p>
-        </div>
-        <div class="line3 line">
-          <p class="bold">2</p>
-          <p class="line3-desc">Units</p>
-          <p class="bold">15</p>
-          <p class="line3-desc">Lessons</p>
-          <p class="bold">20</p>
-          <p class="line3-desc">Topics</p>
-        </div>
-        <div class="line4 line">
-          <form action="" class="bold">
-            <select class="teacher select" id="noclass">
-              <option value="Course">No Classes</option>
-            </select>
-          </form>
-        </div>
-
-        <div class="star">
-          <img src="./icons/favourite.svg" alt="" />
-        </div>
-      </div>
-      <div class="card-divs" id="div3">
-        <div class="card-img">
-          <img src="./images/imageMask.svg" alt="" />
-        </div>
-        <div class="previews">
-          <img src="./icons/preview.svg" alt="" class="pre-img" />
-          <img src="./icons/manage course.svg" alt="" class="pre-img" />
-          <img src="./icons/grade submissions.svg" alt="" class="pre-img" />
-          <img src="./icons/reports.svg" alt="" class="pre-img" />
-        </div>
-        <div class="line1 line">
-          <p>Introduction to Biology: Microorganisms and how they affect</p>
-        </div>
-        <div class="line2 line">
-          <p>Biology</p>
-          <p class="slash">|</p>
-          <p>Grade 4</p>
-          <p class="line2-num">+1</p>
-        </div>
-        <div class="line3 line">
-          <p class="bold">5</p>
-          <p class="line3-desc">Units</p>
-          <p class="bold">16</p>
-          <p class="line3-desc">Lessons</p>
-          <p class="bold">22</p>
-          <p class="line3-desc">Topics</p>
-        </div>
-        <div class="line4 line">
-          <form action="" class="bold">
-            <select class="teacher select">
-              <option value="Course">All Classes</option>
-            </select>
-          </form>
-        </div>
-        <div class="line5 line">
-          <p>300 students</p>
-        </div>
-        <div class="star">
-          <img src="./icons/favourite.svg" alt="" />
-        </div>
-      </div>
-      <div class="card-divs" id="div4">
-        <div class="card-img">
-          <img src="./images/imageMask-3.svg" alt="" />
-        </div>
-        <div class="previews">
-          <img src="./icons/preview.svg" alt="" class="pre-img" />
-          <img src="./icons/manage course.svg" alt="" class="pre-img" />
-          <img src="./icons/grade submissions.svg" alt="" class="pre-img" />
-          <img src="./icons/reports.svg" alt="" class="pre-img" />
-        </div>
-        <div class="line1 line">
-          <p>Introduction to hign school Mathematics</p>
-        </div>
-        <div class="line2 line">
-          <p>Mathematics</p>
-          <p class="slash">|</p>
-          <p>Grade 8</p>
-          <p class="line2-num">+3</p>
-        </div>
-        <div class="line3 line">
-          <p class="bold">4</p>
-          <p class="line3-desc">Units</p>
-          <p class="bold">18</p>
-          <p class="line3-desc">Lessons</p>
-          <p class="bold">24</p>
-          <p class="line3-desc">Topics</p>
-        </div>
-        <div class="line4 line">
-          <form action="" class="bold">
-            <select class="teacher select">
-              <option value="Course">Mr. Frank's Class A</option>
-            </select>
-          </form>
-        </div>
-        <div class="line5 line">
-          <p>44 students</p>
-          <p class="slash">|</p>
-          <p>14-Oct-2019 - 20-Oct-2020</p>
-        </div>
-        <div class="star">
-          <img src="./icons/favourite.svg" alt="" />
-        </div>
-      </div>
-    </div>
+    <!-- div for cards -->
+    <div class="course-card"></div>
 
     <footer id="footer">
       <div id="foot-div1">
@@ -260,15 +93,5 @@
       </div>
     </footer>
   </body>
-  <script>
-    function myFunction() {
-      // var x = document.getElementsByClassName("hidden");
-      var x = document.getElementById("nav-btn");
-      if (x.style.display === "none") {
-        x.style.display = "flex";
-      } else {
-        x.style.display = "none";
-      }
-    }
-  </script>
+  <script type="module" src="./Scripts/script.js"></script>
 </html>
