dropdown downs animations

--- a/index_dashboard.html
+++ b/index_dashboard.html
@@ -25,14 +25,14 @@
           <a href="" class="nav-each-btn">Reports</a>
           <a href="" class="nav-each-btn">Admin</a>
         </div>
-        <a href="" class="nav-each-btn">
+        <a href="javascript:void(0);" class="nav-each-btn">
           <div id="nav-div1">
             <div class="indicators">
               <div class="noti_count" role="status">1</div>
             </div>
           </div>
         </a>
-        <a href="" class="nav-each-btn">
+        <a href="javascript:void(0);" class="nav-each-btn">
           <div id="nav-div2">
             <div class="indicators">
               <div class="noti_count" role="status">1</div>
@@ -68,7 +68,7 @@
       </div>
 
       <!-- Notification dropdown -->
-      <div class="overlap notifications">
+      <div class="overlap notifications" id="noti-dropdown">
         <div>
           <ul class="noti-dropdown">
             <a href=""
@@ -154,7 +154,7 @@
       </div>
 
       <!-- Announcements dropdown -->
-      <div class="overlap announcement">
+      <div class="overlap announcement" id="announce-dropdown">
         <div>
           <ul class="noti-dropdown">
             <a href=""
